--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interpre-Friend</title>
+  <title>ALTERNATE SITE -- Interpre-Friend</title>
   <!--Bulma Link-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
   <!-- Font Awesome CSS Icons (For cool glyphicons) -->
@@ -27,7 +27,7 @@
   <section class="hero has-background-primary-dark ">
     <div class="hero-body">
       <div class="container ">
-        <h1 class="title has-text-centered is-size-2 is-family-sans-serif has-text-weight-bold "><strong>Interpre-Friend</strong></h1>
+        <h1 class="title has-text-centered is-size-2 is-family-sans-serif has-text-weight-bold "><strong>ALTERNATE SITE -- Interpre-Friend</strong></h1>
       </div>
     </div>
   </section>
