Comparing to curl translation call

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
             <textarea class="textarea" id="text-display"placeholder="Text Display Here" style="overflow-y:scroll;height:100px;"></textarea>
           </div>
         </div> 
+        <div class="field">
+          <div class="control">
+            <textarea class="textarea" id="translated-display"placeholder="Translated version" style="overflow-y:scroll;height:100px;"></textarea>
+          </div>
+        </div> 
     </div>
   </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
