--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   <section class="hero has-background-primary-dark ">
     <div class="hero-body">
       <div class="container ">
-        <h1 class="title has-text-centered is-size-2 is-family-sans-serif has-text-weight-bold "><strong>ALTERNATE SITE -- Interpre-Friend -- Version 07-12-2020 15:00</strong></h1>
+        <h1 class="title has-text-centered is-size-2 is-family-sans-serif has-text-weight-bold ">
+        <strong>ALTERNATE SITE -- Interpre-Friend -- <br>Version 07-12-2020 15:07</strong></h1>
       </div>
     </div>
   </section>
