--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="hero-body">
       <div class="container ">
         <h1 class="title has-text-centered is-size-2 is-family-sans-serif has-text-weight-bold ">
-        <strong>ALTERNATE SITE -- Interpre-Friend<br> -- Version 07-12-2020 15:13</strong></h1>
+        <strong>ALTERNATE SITE --<br>Version 07-12-2020 15:34<br>Interpre-Friend </strong></h1>
       </div>
     </div>
   </section>
